# spin-scenario

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dep.sh  dep_win.sh  dep_win10.sh  gitee.gitmodules  main.cpp  readthedocs.yml
cmake/: FindFFTW.cmake  FindNLopt.cmake  FindTensorFlow.cmake
docs/: README.md
docs/source/: about.rst  conf.py  contact.rst  development.rst  index.rst  installation.rst  license.rst  publication.rst  roadmap.rst
docs/source/_themes/ssl/: layout.html  theme.conf
docs/source/api/: api-top.rst
docs/source/media/: S1090780719300229.bib
docs/source/media/oc/: oc1.lua
docs/source/media/seq/: 2ms_amp_phase.RF  2ms_ux_uy.RF  s1s2.lua
docs/source/module/: oc.rst  phantom.rst  physx.rst  seq.rst  spinsys.rst  utility.rst
docs/source/module/functions/: acq.rst  delay.rst  exprGrad.rst  hardRF.rst  line-properties.rst  multi_rf_optimizer.rst  plot.rst  rf_optimizer.rst  shapedGrad.rst  shapedRF.rst  table2mat.rst  table2vec.rst  trapGrad.rst  write.rst
docs/source/tutorial/: tutorial-top.rst
examples/basic/: phantom.lua  state.lua
examples/oc/: 2spin_mix.lua  oc2.lua  oc3.lua  oc4.lua
examples/oc/coop/: coop_20190221_113357.h5  coop_2spin_eval.lua  coop_3spin_eval.lua
examples/oc/multi-band with different target states/: fid_valid.lua  oc5.lua
examples/oc/tensorflow/: tf_2spin.lua
examples/phantom/: config.txt  convert-mhd-phantom-to-spinscenario-h5.rar  convert-spinscenario-h5-results-to-mhd.rar  h5_phantom_2d.m  h5_phantom_3d.m  mida.rar  phantom.lua
examples/seq/: acrylic.lua  cosy.lua  gradient.lua  inept1.lua  proton.lua  rf_adjust.lua  se.lua  se_gpu.lua  shapedRF.lua  sinc.RF  spsel.lua
examples/seq/rf/: hardRF.lua  shape.RF  shapedRF.lua
examples/utility/: plot.lua  raw_abs.txt  table2mat.lua  table2vec.lua
share/spin-scenario/config/: expmv_theta.txt  ssl_global.lua
share/spin-scenario/config/gnuplot/: dark2.pal  xyborder.cfg
share/spin-scenario/config/gnuplot/usr/: ShiLiu16.plt  YiZhang16.plt
share/spin-scenario/tf_files/: graph_generator.py
share/spin-scenario/tf_files/matrix_exp_op/: CMakeCache.txt  CMakeLists.txt  Makefile  __init__.py  cmake_install.cmake
share/spin-scenario/tf_files/matrix_exp_op/kernels/: matrix_exp_kernel.cc  matrix_exp_kernel_gpu.cu.cc  matrix_exp_op.cc  matrix_exp_op.h
share/spin-scenario/tf_files/matrix_exp_op/ops/: matrix_exp.cc
src/: ssl.cpp  ssl.h
src/kernel/equip/: coil.cpp  coil.h  coil_array.cpp  coil_array.h  coil_biot_savart.cpp  coil_biot_savart.h  coil_factory.cpp  coil_factory.h  coil_ideal.cpp  coil_ideal.h
src/kernel/oc/: coop_grape.cpp  coop_grape.h  grape.cpp  grape.h  oc_auxiliary.h  tf_opt.cpp  tf_opt.h
src/kernel/physx/: engine.cpp  engine.h
src/kernel/sample/: phantom.cpp  phantom.h
src/kernel/seq/: acquire.cpp  acquire.h  analytical_gradient.cpp  analytical_gradient.h  concurrent_block.cpp  concurrent_block.h  delay.cpp  delay.h  glue.cpp  glue.h  gradient.cpp  gradient.h  ideal_gradient.cpp  ideal_gradient.h  ideal_rf.cpp  ideal_rf.h  interval_tree.h  observer.cpp  observer.h  pulse_seq.cpp  pulse_seq.h  rf_pulse.cpp  rf_pulse.h  seq_block.cpp  seq_block.h  seq_block_factory.cpp  seq_block_factory.h  serial_block.cpp  serial_block.h  shaped_rf.cpp  shaped_rf.h  trapezoid_gradient.cpp  trapezoid_gradient.h
src/kernel/spinsys/: isotope.cpp  isotope.h  spin_system.cpp  spin_system.h  spin_system_auxiliary.cpp  spin_system_auxiliary.h
src/kernel/utilities/: ssl_config.cpp  ssl_config.h  ssl_path.cpp  ssl_path.h  ssl_plot.cpp  ssl_plot.h  unwrap2d.cpp  unwrap2d.h
test/basic/: spin_system.lua
test/oc/: oc1.lua  oc5.lua
test/oc/coop/: coop_20190221_154821.h5  coop_2spin.lua  coop_3spin.lua
test/oc/multi-band with different target states/: shape.RF
test/oc/tensorflow/: tf_1spin.lua
test/seq/: fid.lua  inept2.lua  proton (copy).lua  strong_coupling.lua
